[package]
name = "thinner"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
http = "0.2.9"
hyper = "0.14.27"
hyper-tls = "0.5.0"
prost = "0.12.1"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tonic-web = "0.10.2"
tower = "0.4.13"
tracing-subscriber = { version = "0.3.17", features = ["tracing-log", "fmt"] }

[build-dependencies]
tonic-build = "0.10.2"
